@@ -2,7 +2,7 @@
 	$Id$
 	part of m0n0wall (http://m0n0.ch/wall)
 
-	Copyright (C) Lennart Grahl <masterkeule@gmail.com>.
+	Copyright (C) 2012 Lennart Grahl <lennart.grahl@gmail.com>.
 	All rights reserved.
 
 	Redistribution and use in source and binary forms, with or without
